welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: type array
var T:array[Color];
      ^Array1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var T:array[Color];
    ^